<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_baseline_alarm_add_24"
            android:title="@string/reminders" />

        <item
            android:id="@+id/nav_calories"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/calories" />

        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_baseline_directions_run_24"
            android:title="@string/exercise_suggestions" />

        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/meals_suggestions" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_class_24"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/logout" />
    </group>
</menu>